@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - log a warning when the command did not exit successfully
 
 0.006     2013-11-03 20:04:02Z
         - more fixing of string interpolation issues in tests on win32
